added _variables.scss and added an import to test css compilation

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,4 +3,4 @@ body div.container.flexBox {
   flex-wrap: wrap;
   justify-content: space-between; }
   body div.container.flexBox p {
-    color: blue; }
+    color: #37a097; }
