--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 body {
     div.container.flexBox {
         display: flex;
@@ -5,7 +7,7 @@ body {
         justify-content: space-between;
 
         p{
-            color:blue;
+            color: $darkerGreen;
 
         }
     }
