--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -5,8 +5,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
-        
+        <script
+  src="https://code.jquery.com/jquery-3.3.1.min.js"
+  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+  crossorigin="anonymous"></script>
+
         <link href="/assets/styles.css" rel="stylesheet">
+        <script src="/assets/todo-list.js"></script>
     </head>
     <body>
         <h1>My Todo List</h1>
@@ -18,9 +23,9 @@
             </form>
         </div>
         <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
+            <% for(var i=0; i <todos.length; i++){ %>
+                <li><%= todos[i].item %></li>
+            <% } %>
         </ul>
     </body>
 </html>
