--- a/app/components/todo/todo.html
+++ b/app/components/todo/todo.html
@@ -9,5 +9,10 @@
         </li>
     </ul>
 
+    <form ng-submit="addUser()">
+        <input type="text" name="name" ng-model="newUser.name" placeholder="name" required>
+        <input type="text" name="task" ng-model="newUser.task" placeholder="task" required>
+        <input type="submit" value="submit">
+    </form>
 
 </div>
