added delete node endpoint(/todoData/:user) and an ng-click on the list item will delete that item by _id in mongoDB

--- a/app/components/todo/todo.html
+++ b/app/components/todo/todo.html
@@ -3,7 +3,7 @@
     <input type="text" ng-model="searchUsers" placeholder="search a user">
     
     <ul>
-        <li ng-repeat="user in users | orderBy: 'name' | filter: searchUsers">
+        <li ng-repeat="user in users | orderBy: 'name' | filter: searchUsers" style="cursor: pointer" ng-click="deleteUser(user)">
             <h3>Person: {{user.name}}</h3>
             <h4>Task: {{user.task}}</h4>
         </li>
